fix(jdk17): replace List.getFirst() with get(0) in Issue5505BoundRidCollectionTargetTest
java.util.List.getFirst() is a Java 21 SequencedCollection default method,
unavailable on JDK 17. seeds is a plain List<RID>.